@@ -10,7 +10,6 @@ for 0.7
   * IPython sessions
   * HTML with special formatting?
   * LaTeX special formatting?
-  * OCaml
   * Nemerle
   * Assembler
   * Objective C
