@@ -5,6 +5,8 @@ Version 0.7 (in development)
 ----------------------------
 (codename to be selected, released Feb XX, 2007)
 
+- Added an OCaml lexer, thanks to Adam Blinkinsop.
+
 - Made the HTML formatter more flexible, and easily subclassable in order
   to make it easy to implement custom wrappers, e.g. alternate line
   number markup.  
